--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Urdu-English Poetry App</h1>
+        <h1>random poetry caption</h1>
         <div>
             <button id="btn-urdu">Urdu Poetry</button>
             <button id="btn-english">English Poetry</button>
         </div>
         <div id="poetry-display">
-            <p>Select a language to display a poem.</p>
+            <p>.....</p>
         </div>
     </div>
     
