--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <p>.....</p>
         </div>
     </div>
+    <a id="link" href="https://www.instagram.com/ateeb_990/">Developer</a>
     
     <script src="script.js"></script>
 </body>
