--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         </div>
     </div>
     <a id="link" href="https://www.instagram.com/ateeb_990/">Developer</a>
+    <br>
+    <br>
+    <br>
+    <p>As a very choosy person, I often find myself overwhelmed when trying to select the perfect caption for my posts. The endless options can be frustrating, and I often spend too much time deliberating over just the right words. This irritation inspired me to create a random post caption website.</p>
     
     <script src="script.js"></script>
 </body>
