--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <br>
     <br>
     <br>
-    <p>As a very choosy person, I often find myself overwhelmed when trying to select the perfect caption for my posts. The endless options can be frustrating, and I often spend too much time deliberating over just the right words. This irritation inspired me to create a random post caption website.</p>
+   <p id="ppp">As a very choosy person, I often find myself overwhelmed when trying to select the <br> perfect caption for my posts. The endless options can be frustrating, and I often <br>spend too much time deliberating over just the right words. This irritation inspired <br>me to create a random post caption website</p>
     
     <script src="script.js"></script>
 </body>
